--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="relative flex items-center justify-between h-20">
                 <div class="flex-shrink-0">
                     <a href="#home" class="flex items-center gap-3">
-                        <img src="images/BLUE AZ LOGO.png" alt="Agozenith Program Logo" class="w-14 h-14">
+                        <img src="BLUE AZ LOGO.png" alt="Agozenith Program Logo" class="w-14 h-14">
                         <span class="sr-only">AlgoZenith Campus Connection Program</span>
                     </a>
                 </div>
@@ -106,10 +106,10 @@
                     </div>
                     <div class="order-first lg:order-last">
                         <div class="rounded-2xl overflow-hidden border border-gray-800 bg-gradient-to-br from-gray-900/60 to-gray-900 p-4">
-                            <img src="images/AZ-team.jpeg" alt="AZ CCP event" loading="lazy" class="w-full h-[320px] object-cover rounded-xl">
+                            <img src="AZ-team.jpeg" alt="AZ CCP event" loading="lazy" class="w-full h-[320px] object-cover rounded-xl">
                             <div class="mt-4 grid grid-cols-2 gap-3">
-                                <img src="images/workshop_home.jpg" alt="workshop" loading="lazy" class="w-full h-36 object-cover object-top rounded-xl">
-                                <img src="images/lead-home.png" alt="leaders" loading="lazy" class="w-full h-36 object-cover object-top rounded-xl">
+                                <img src="workshop_home.jpg" alt="workshop" loading="lazy" class="w-full h-36 object-cover object-top rounded-xl">
+                                <img src="lead-home.png" alt="leaders" loading="lazy" class="w-full h-36 object-cover object-top rounded-xl">
                             </div>
                         </div>
                         <div class="mt-6 text-center lg:text-right">
@@ -188,23 +188,23 @@
                 <div class="relative">
                     <div id="peek-scroll" class="hide-scrollbar flex gap-4 overflow-x-auto py-4 snap-x snap-mandatory">
                         <figure class="snap-center flex-shrink-0 w-3/4 sm:w-1/3 md:w-1/4 bg-gray-900 rounded-lg overflow-hidden">
-                            <img src="images/ideathon.jpg" alt="event vibes" loading="lazy" class="w-full h-48 object-cover">
+                            <img src="ideathon.jpg" alt="event vibes" loading="lazy" class="w-full h-48 object-cover">
                             <figcaption class="p-2 text-xs text-center text-gray-300">Ideathon</figcaption>
                         </figure>
                         <figure class="snap-center flex-shrink-0 w-3/4 sm:w-1/3 md:w-1/4 bg-gray-900 rounded-lg overflow-hidden">
-                            <img src="images/DSA-session.jpeg" alt="leaders" loading="lazy" class="w-full h-48 object-cover">
+                            <img src="DSA-session.jpeg" alt="leaders" loading="lazy" class="w-full h-48 object-cover">
                             <figcaption class="p-2 text-xs text-center text-gray-300">Session on Resume and Networking</figcaption>
                         </figure>
                         <figure class="snap-center flex-shrink-0 w-3/4 sm:w-1/3 md:w-1/4 bg-gray-900 rounded-lg overflow-hidden">
-                            <img src="images/IIT-Kanpur-COmmunity.jpg" alt="Community event" loading="lazy" class="w-full h-48 object-cover">
+                            <img src="IIT-Kanpur-COmmunity.jpg" alt="Community event" loading="lazy" class="w-full h-48 object-cover">
                             <figcaption class="p-2 text-xs text-center text-gray-300">IIT Kanpur Chapter</figcaption>
                         </figure>
                         <figure class="snap-center flex-shrink-0 w-3/4 sm:w-1/3 md:w-1/4 bg-gray-900 rounded-lg overflow-hidden">
-                            <img src="images/workshop.jpg" alt="workshop" loading="lazy" class="w-full h-48 object-cover">
+                            <img src="workshop.jpg" alt="workshop" loading="lazy" class="w-full h-48 object-cover">
                             <figcaption class="p-2 text-xs text-center text-gray-300">Introduction to programming and DSA</figcaption>
                         </figure>
                         <figure class="snap-center flex-shrink-0 w-3/4 sm:w-1/3 md:w-1/4 bg-gray-900 rounded-lg overflow-hidden">
-                            <img src="images/CP-contest.jpeg" alt="hackathon" loading="lazy" class="w-full h-48 object-cover">
+                            <img src="CP-contest.jpeg" alt="hackathon" loading="lazy" class="w-full h-48 object-cover">
                             <figcaption class="p-2 text-xs text-center text-gray-300">Competitive programming Contest</figcaption>
                         </figure>
                         
@@ -270,7 +270,7 @@
                         <blockquote class="snap-start flex-shrink-0 w-11/12 sm:w-1/2 lg:w-1/3 bg-brand-black p-6 rounded-2xl border border-gray-800">
                             <p class="text-gray-300 mb-4">"Being the AlgoZenith Chapter Lead was a wonderful experience!! It honed my leadership and technical skills. The support from the AZ team was incredible and it felt great to be part of a community that genuinely empowers coders. This journey boosted my confidence and connected me with like minded peers across campuses."</p>
                             <footer class="flex items-center gap-3">
-                                <img class="w-12 h-12  rounded-full  object-cover object-top" src="images/Shiwangi-testimonial.png" alt="Shiwangi-IIIT">
+                                <img class="w-12 h-12  rounded-full  object-cover object-top" src="Shiwangi-testimonial.png" alt="Shiwangi-IIIT">
                                 <div><div class="font-semibold">Shiwangi Singh</div><div class="text-sm text-blue-400">IIIT Bhagalpur</div></div>
                             </footer>
                         </blockquote>
@@ -278,7 +278,7 @@
                         <blockquote class="snap-start flex-shrink-0 w-11/12 sm:w-1/2 lg:w-1/3 bg-brand-black p-6 rounded-2xl border border-gray-800">
                             <p class="text-gray-300 mb-4">"From dreaming of hosting events to actually making them happen, AZ turned aspirations into reality. It taught me leadership, boosted my confidence, and proved that I can achieve anything I set my mind to. So much love for this experience—I'll truly miss the thrill of hosting, the hustle of securing permissions"</p>
                             <footer class="flex items-center gap-3">
-                                <img class="w-12 h-12  rounded-full" src="images/Nehal-testimonial1.png" alt="Nehal-VIIT">
+                                <img class="w-12 h-12  rounded-full" src="Nehal-testimonial1.png" alt="Nehal-VIIT">
                                 <div><div class="font-semibold">Nehal Fatema</div><div class="text-sm text-blue-400">Vignan's Institute of Information Technology</div></div>
                             </footer>
                         </blockquote>
@@ -286,7 +286,7 @@
                         <blockquote class="snap-start flex-shrink-0 w-11/12 sm:w-1/2 lg:w-1/3 bg-brand-black p-6 rounded-2xl border border-gray-800">
                             <p class="text-gray-300 mb-4">"Being a lead at AZ CCP was a experience like none other. I was able to enhance myself in multiple domains such as Leadership as I was able to build and lead an entire team of talented people,  and Yes How can I forget the awesome memories and connection established with other AZ Leads. I am truly thankful to the AZ team"</p>
                             <footer class="flex items-center gap-3">
-                                <img class="w-12 h-12  rounded-full" src="images/Kabir-testimonial.png" alt="Kabir-GEC">
+                                <img class="w-12 h-12  rounded-full" src="Kabir-testimonial.png" alt="Kabir-GEC">
                                 <div><div class="font-semibold">Kabir Dafda</div><div class="text-sm text-blue-400">Government Engineering College, Patan</div></div>
                             </footer>
                         </blockquote>
@@ -294,7 +294,7 @@
                         <blockquote class="snap-start flex-shrink-0 w-11/12 sm:w-1/2 lg:w-1/3 bg-brand-black p-6 rounded-2xl border border-gray-800">
                             <p class="text-gray-300 mb-4">"A FUN-TASTIC opportunity to Lead and reignite the lost atmosphere of coding culture in our college grounds.From ideation to execution, the entire experience was incredibly fulfilling.A huge shoutout the AlgoZenith team for their unwavering support and trust. Their efforts made this journey a grand success."</p>
                             <footer class="flex items-center gap-3">
-                                <img class="w-12 h-12 rounded-full" src="images/Ashutosh-testimonial.png" alt="Ashutosh-srmcem">
+                                <img class="w-12 h-12 rounded-full" src="Ashutosh-testimonial.png" alt="Ashutosh-srmcem">
                                 <div><div class="font-semibold">Ashutosh Singh</div><div class="text-sm text-blue-400">SRMCEM, Lucknow</div></div>
                             </footer>
                         </blockquote>
@@ -314,7 +314,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-yellow-400">Join Our Growing Community</h2>
                 <p class="mt-2 text-gray-300 max-w-2xl mx-auto">AZ is propelling nationwide impact, powered by a thriving community engaged in everything from virtual workshops to in-person hackathons. The movement is happening; don't wait to join in.</p>
                 <div class="mt-8 mx-auto max-w-sm">
-                    <img src="images/mapindia-3.jpg" alt="AZ CCP Community Event" class="rounded-lg shadow-lg w-full h-auto">
+                    <img src="mapindia-3.jpg" alt="AZ CCP Community Event" class="rounded-lg shadow-lg w-full h-auto">
                 </div>
                 <div class="mt-8 flex items-center justify-center gap-4">
                     <a href="https://forms.gle/HpedZoLqd7puN1hPA" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-yellow-400 text-black font-bold py-3 px-6 rounded-full">Apply Now & Lead</a>
